Adds jinja2 to dependnecies (#2413)
Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "grpcio-status",
     "importlib-metadata",
     "isodate",
+    "jinja2",
     "joblib",
     "jsonpickle",
     "keyring>=18.0.1",
