Fix UV install in Makefile (#2421)
* Fix UV install in Makefile

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Fixes failing test

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Use dev version to be simplier

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Use v0.8.18 flytectl

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Adds comment

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Remove version specification

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Remove version pin

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Use pseudo version for integreation tests

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Use a version that packaging recognizes

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Remove quotes

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* Set flyteidl version

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

* FIX Fixes version more for uv strictness

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

---------

Signed-off-by: Thomas J. Fan <thomasjpfan@gmail.com>

--- a/.github/workflows/pythonbuild.yml
+++ b/.github/workflows/pythonbuild.yml
@@ -275,6 +275,7 @@ jobs:
           file: Dockerfile.dev
           build-args: |
             PYTHON_VERSION=${{ matrix.python-version }}
+            PSEUDO_VERSION=1.999.0dev0
           push: true
           tags: localhost:30000/flytekit:dev
           cache-from: type=gha
