add openai batch API agent (#2353)
* add openai batch endpoint agent

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* add jsonl type transformer, modify agent

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* revert format changes

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* revert iterator edits

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* typealias

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* add jsonlines

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* remove typealias

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* update readthedocs python version

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* update docs python version

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* replace dict with enum

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* modify json type; add a check to validate if iterator's empty

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* ignore mypy check

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* modify JSON type

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* move to openai folder

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* update readme

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* update setup.py

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* batch_api to batch, add plugin to setup.py

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* modify return type

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* modify return type

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* fix lint error

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* remove guess_python_type

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* modify json type

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* modify tests

Signed-off-by: Samhita Alla <aallasamhita@gmail.com>

* json to iterator[j

--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -147,6 +147,29 @@ jobs:
           file: ./plugins/flytekit-sqlalchemy/Dockerfile
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Prepare OpenAI Batch Image Names
+        id: openai-batch-names
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/flytekit
+          tags: |
+            py${{ matrix.python-version }}-openai-batch-latest
+            py${{ matrix.python-version }}-openai-batch-${{ github.sha }}
+            py${{ matrix.python-version }}-openai-batch-${{ needs.deploy.outputs.version }}
+      - name: Push OpenAI Batch Image to GitHub Registry
+        uses: docker/build-push-action@v2
+        with:
+          context: "./plugins/flytekit-openai/"
+          platforms: linux/arm64, linux/amd64
+          push: ${{ github.event_name == 'release' }}
+          tags: ${{ steps.openai-batch-names.outputs.tags }}
+          build-args: |
+            VERSION=${{ needs.deploy.outputs.version }}
+            PYTHON_VERSION=${{ matrix.python-version }}
+          file: ./plugins/flytekit-openai/Dockerfile.batch
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   build-and-push-flyteagent-images:
     runs-on: ubuntu-latest
