--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "isodate",
     "jinja2",
     "joblib",
+    "jsonlines",
     "jsonpickle",
     "keyring>=18.0.1",
     "markdown-it-py",
@@ -42,7 +43,7 @@ dependencies = [
     "python-json-logger>=2.0.0",
     "pytimeparse>=1.1.8,<2.0.0",
     "pyyaml!=6.0.0,!=5.4.0,!=5.4.1", # pyyaml is broken with cython 3: https://github.com/yaml/pyyaml/issues/601
-    "requests>=2.18.4,<3.0.0,!=2.32.0,!=2.32.1",
+    "requests>=2.18.4,<3.0.0,!=2.32.0,!=2.32.1,!=2.32.2",
     "rich",
     "rich_click",
     "s3fs>=2023.3.0,!=2024.3.1",
