--- a/flyrs/Cargo.toml
+++ b/flyrs/Cargo.toml
@@ -9,7 +9,7 @@ name = "flyrs"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = "0.21.2"
+pyo3 = { version = "0.21.2", features = [ "abi3-py312", "extension-module" ] }
 flyteidl = { git = "https://github.com/flyteorg/flyte.git", branch = "master" }
 prost = "0.12.4"
 tonic = "0.11.0"
